--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora de hidratacion basal</title>
+    <link rel="stylesheet" href="style.css">
 </head>
         <body>
-                 <div>
+                 <div class="calculadora">
                  <h1>Calculadora basal</h1>
+
 
 
                  <input type="number" placeholder="Ingrese el peso en kg">
@@ -17,7 +19,7 @@
                  <p>m+m/2 : 105cc/h</p>
                  </div> 
                   
-                  <div>
+                  <div class="info">
                  
                      <h2>Como se calcula?</h2>
                      <ul>
